--- a/hooks/install
+++ b/hooks/install
@@ -16,17 +16,10 @@ fi
 log_info "Copy the executable"
 cp $build_dir/zookeeper-3.4.6/* $OSP_UNIT_HOME/ -r
 
-log_info "Get client port"
-client_port="$(unit-get client_port)"
-if [[ -z $client_port ]]; then
-    log_fatal "Failed to unit-get client_port"
-fi
+conf_file=$OSP_UNIT_HOME/conf/zoo.cfg
+log_info "Create $conf_file"
+touch $conf_file
 
-log_info "Get communicate port"
-port="$(unit-get communicate_port)"
-if [[ -z $port ]]; then
-    log_fatal "Failed to unit-get communicate_port"
-fi
-
-bin_file=$OSP_UNIT_HOME/bin/zkServer.sh
-conf_file=$OSP_UNIT_HOME/conf/zoo.conf
+data_dir=$OSP_UNIT_HOME/data
+log_info "create $data_dir"
+mkdir -p $data_dir
